--- a/assets/panel.html
+++ b/assets/panel.html
@@ -34,6 +34,7 @@
     // 与插件通信
     const vscode = acquireVsCodeApi();
     document.getElementById('btn').addEventListener('click', () => {
+      console.log(123);
       vscode.postMessage({ command: 'hello' });
     });
   </script>
