--- a/assets/panel.html
+++ b/assets/panel.html
@@ -36,7 +36,7 @@
     const vscode = acquireVsCodeApi();
     document.getElementById('btn').addEventListener('click', () => {
       console.log(123);
-      vscode.postMessage({ command: 'saveRules', rules: JSON.stringify([{ name: 'test', value: 'test' }]) });
+      vscode.postMessage({ command: 'saveRules', rules: [{ name: 'test', value: 'test' }] });
     });
     document.getElementById('btn1').addEventListener('click', () => {
       console.log(1234);
